[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imgopt-cli"
version = "1.0.0"
description = "A high-performance CLI tool to batch optimize images for the web."
readme = "README.md"
authors = [{name = "Ahmed Samy El-khouly"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "Pillow>=10.3.0",
    "watchdog>=4.0.2",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/ahmedthebest31/imgopt"
"Bug Tracker" = "https://github.com/ahmedthebest31/imgopt/issues"

[project.scripts]
imgopt = "imgopt.cli:main"
